--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nodemailer": "^7.0.6"
-  }
+    "express-rate-limit": "^8.0.1",
+    "nodemailer": "^7.0.6",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "tinymce": "^8.0.2"
+  },
+  "devDependencies": {}
 }
