upload/import csv working well - tweaks still needed

--- a/knownURLs.json
+++ b/knownURLs.json
@@ -21,12 +21,18 @@
         "/__padlock_locked.png",
         "/__padlock_unlocked.png",
         "/_Home.png",
+        "/_Menu.png",
         "/_Camera.png",
+        "/_fileOpen.png",
+        "/_fileUpload.png",
         "/_Address.png",
         "/_Note.png",
+        "/_fileSave.png",
         "/_Save.png",
         "/_Search.png",
         "/favicon.png",
+        "/favicon_lightMode.png",
+        "/favicon_darkMode.png",
         "/session-reset?reload=true",
         "/map-marker.webp"
     ],
